--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.1.2"
+    "bootstrap": "^4.3.1",
+    "chart.js": "2.7.2",
+    "classnames": "^2.2.6",
+    "d3-geo": "^1.11.3",
+    "faker": "^4.1.0",
+    "formik": "^2.2.9",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
+    "react-bootstrap": "^2.0.2",
+    "react-chartjs-2": "^2.7.4",
+    "react-component-queries": "^2.3.0",
+    "react-d3-map": "^0.8.3",
+    "react-dom": "^16.8.4",
+    "react-ga": "^2.5.7",
+    "react-icons": "^4.3.1",
+    "react-infinite-calendar": "^2.3.1",
+    "react-notification-system": "^0.2.17",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-simple-maps": "^0.12.1",
+    "react-sizeme": "^2.5.2",
+    "reactstrap": "^7.1.0",
+    "victory": "^32.0.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0",
+    "node-sass": "^4.11.0",
+    "react-scripts": "2.1.8",
+    "serve": "^10.1.2",
+    "stylelint": "^9.3.0",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^0.8.1",
+    "stylelint-scss": "^3.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
