--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,11 @@
     "react-simple-maps": "^0.12.1",
     "react-sizeme": "^2.5.2",
     "reactstrap": "^7.1.0",
-    "victory": "^32.0.0"
+    "victory": "^32.0.0",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "web-vitals": "^1.1.2",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0",
