cleared some errors

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -2,8 +2,9 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "local_oneinr",
+    "database": "oneinrtdb",
     "host": "127.0.0.1",
+    "port": "3306",
     "dialect": "mysql"
   },
   "test": {
