--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,19 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "debug": "^2.6.9",
     "express": "^4.16.4",
+    "express-validator": "^6.13.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.3",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.9.0",
-    "sequelize-cli": "^6.3.0"
+    "sequelize-cli": "^6.3.0",
+    "twin-bcrypt": "^2.1.1"
   },
   "main": "app.js",
   "author": "",
