--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.1.1",
+    "@mui/material": "^5.2.0",
     "@mui/styled-engine": "^5.1.1",
     "axios": "^0.24.0",
     "bootstrap": "4.3.1",
@@ -15,6 +15,7 @@
     "d3-geo": "^1.11.3",
     "faker": "^4.1.0",
     "formik": "^2.2.9",
+    "json-server": "^0.17.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
