--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "@mui/material": "^5.1.1",
     "@mui/styled-engine": "^5.1.1",
     "axios": "^0.24.0",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
     "classnames": "^2.2.6",
     "d3-geo": "^1.11.3",
