--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.2.0",
     "react-simple-maps": "^0.12.1",
     "react-sizeme": "^2.5.2",
+    "react-toast": "^1.0.3",
     "reactstrap": "^7.1.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
