--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "Admin",
+    "username": "root",
     "password": "root",
-    "database": "oneInrDb",
+    "database": "oneinrv20",
     "host": "5.189.128.116",
     "port": "7232",
     "dialect": "mysql"
