--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,39 @@
 version: "3"
 services: 
     web:
-      build: ./one_inr_backend/
-      container_name: one_inr-nodejs-demo
-      image: one_inr:nodejs-demo
-      links:
-        - db:db
+      restart: always
+      build: ./backend/
+      container_name: one-inr-back
+      image: one_inr:latest
+      environment:
+        - NODE_ENV=development
+      # links:
+      #   - db:db
       ports:
-        - "9731:3000"
+        - "8900:3000"
       volumes:
-        - one_inr-public-data:/usr/src/app/public/uploads
+        - /home/sonatan/new-one-inr/public/uploads/:/usr/src/app/public/uploads
+        - /home/sonatan/new-one-inr/npmLogs/:/root/.npm/_logs
 
-    db:
-      container_name: one_inr_db
-      image: mysql
+    # db:
+    #   container_name: one_inr_db
+    #   image: mysql
+    #   volumes:
+    #     - one_inr-data:/data/db
+    #   ports:
+    #     - "27019:27017"
+
+    nginxApp:
+      restart: always
+      container_name:  one-inr-front
+      image:  one-inr-front:latest
+      build: ./frontend/
+      environment:
+        - ENV=development
       volumes:
-        - one_inr-data:/data/db
+        - ./logs/:/new-one-inr/logs
       ports:
-        - "27019:27017"
+        - '8905:80'
+      links:
+        - web:web
+
