--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -10,8 +10,8 @@
   
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "root",
+    "database": "oneinrv21",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
