--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -9,11 +9,12 @@
   },
   
   "test": {
-    "username": "root",
+    "username": "admin",
     "password": "root",
-    "database": "oneinrv21",
+    "database": "local_oneinr",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "3306"
   },
   "production": {
     "username": "root",
