--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -11,7 +11,7 @@
   "test": {
     "username": "root",
     "password": "root",
-    "database": "local_oneinr",
+    "database": "oneinrv21",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "port": "3306"
