--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-reduction",
+  "name": "one-inr",
   "version": "1.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
@@ -36,12 +36,11 @@
     "redux-thunk": "^2.3.0",
     "victory": "^32.0.0",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-scripts": "2.1.8"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0",
     "node-sass": "^4.11.0",
-    "react-scripts": "2.1.8",
     "serve": "^10.1.2",
     "stylelint": "^9.3.0",
     "stylelint-config-recommended-scss": "^3.2.0",
@@ -52,9 +51,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "serve": "serve -s build",
-    "deploy": "gh-pages -d build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
