--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -2,20 +2,21 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "oneinrv20",
-    "host": "5.189.128.116",
-    "port": "7232",
-    "dialect": "mysql"
-  },
-  
-  "test": {
-    "username": "admin",
-    "password": "root",
     "database": "local_oneinr",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "port": "3306"
   },
+
+  "test": {
+    "username": "root",
+    "password": "root",
+    "database": "oneinrv20",
+    "host": "5.189.128.116",
+    "port": "7232",
+    "dialect": "mysql"
+  },
+
   "production": {
     "username": "root",
     "password": null,
