--- a/one_inr_web/package.json
+++ b/one_inr_web/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
@@ -14,10 +15,14 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "loader": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.21.0",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.6",
     "react-router": "^4.3.0",
