--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       container_name: one-inr-back
       image: one_inr:latest
       environment:
-        - NODE_ENV=development
+        - NODE_ENV=test
       # links:
       #   - db:db
       ports:
