--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "local_oneinr",
+    "database": "oneinrv21",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "port": "3306"
