--- a/one_inr_web/package.json
+++ b/one_inr_web/package.json
@@ -28,6 +28,7 @@
     "react-router": "^4.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "sass": "^1.44.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
