--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.1.1",
     "@mui/styled-engine": "^5.1.1",
     "axios": "^0.24.0",
@@ -28,6 +29,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "2.1.8",
     "react-simple-maps": "^0.12.1",
     "react-sizeme": "^2.5.2",
     "react-toast": "^1.0.3",
@@ -36,8 +38,7 @@
     "redux-thunk": "^2.3.0",
     "victory": "^32.0.0",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.11",
-    "react-scripts": "2.1.8"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "node-sass": "^4.11.0",
