--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pdf-creator-node": "^2.2.4",
     "redis": "^4.0.0",
