--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.3.1",
     "react-infinite-calendar": "^2.3.1",
     "react-notification-system": "^0.2.17",
+    "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.2.0",
