--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.1.1",
     "@mui/styled-engine": "^5.1.1",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.24.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
