--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "express": "^4.16.4",
     "express-validator": "^6.13.0",
     "fast-csv": "^4.3.6",
-    "fs-path": "0.0.25",
+    "fs-path": "^0.0.25",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "morgan": "^1.9.1",
