--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/styled-engine": "^5.1.1",
     "axios": "^0.24.0",
     "bootstrap": "4.3.1",
+    "bootstrap4-toggle": "^3.6.1",
     "chart.js": "2.7.2",
     "classnames": "^2.2.6",
     "d3-geo": "^1.11.3",
