--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "reactstrap": "^7.1.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "suneditor": "^2.41.3",
     "victory": "^32.0.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
