--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-ga": "^2.5.7",
     "react-icons": "^4.3.1",
     "react-infinite-calendar": "^2.3.1",
