--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
+    "react-date-picker": "^8.3.6",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.2.4",
     "react-ga": "^2.5.7",
