--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.3.1",
     "react-infinite-calendar": "^2.3.1",
     "react-notification-system": "^0.2.17",
+    "react-numeric-input": "^2.2.3",
     "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.4",
     "react-router": "^4.3.1",
