--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
     "react-date-picker": "^8.3.6",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-ga": "^2.5.7",
