--- a/one_inr_web/package.json
+++ b/one_inr_web/package.json
@@ -28,6 +28,9 @@
     "react-router": "^4.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.45.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
