--- a/one_inr_web/package.json
+++ b/one_inr_web/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-thunk": "^1.0.0",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.1",
