--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "database": "local_oneinr",
+    "password": "ranger123",
+    "database": "local_oneInr",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "port": "3306"
