--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "ranger123",
+    "password": "root",
     "database": "local_oneinr",
     "host": "127.0.0.1",
     "dialect": "mysql",
