--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "faker": "^4.1.0",
     "formik": "^2.2.9",
     "material-ui": "^0.20.2",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
@@ -25,7 +26,7 @@
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
     "react-date-picker": "^8.3.6",
-    "react-datepicker": "^4.5.0",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-ga": "^2.5.7",
