--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
+    "react-select": "^5.2.2",
     "react-simple-maps": "^0.12.1",
     "react-sizeme": "^2.5.2",
     "react-toast": "^1.0.3",
