--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -11,8 +11,8 @@
   "test": {
     "username": "root",
     "password": "root",
-    "database": "oneinrv20",
-    "host": "5.189.128.116",
+    "database": "newOneInr",
+    "host": "144.91.79.237",
     "port": "7232",
     "dialect": "mysql"
   },
