--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
       ports:
         - "3307:3306"
       volumes:
-         ./db_data:/var/lib/mysql    
-         
+        - ./db_data:/var/lib/mysql    
+
     nginxApp:
       restart: always
       container_name:  one-inr-front
