add new database

--- a/mySql/Dockerfile
+++ b/mySql/Dockerfile
@@ -2,6 +2,6 @@
 FROM mysql:8.0.27
  
 ENV MYSQL_ROOT_PASSWORD root
-ENV MYSQL_DATABASE newOneInr
+ENV MYSQL_DATABASE one_inr_test
 ENV MYSQL_PASSWORD root
 ENV MYSQL_USER root
