--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,13 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pdf-creator-node": "^2.2.4",
+    "random": "^3.0.6",
     "redis": "^4.0.0",
     "sequelize": "^6.9.0",
     "sequelize-cli": "^6.3.0",
     "twin-bcrypt": "^2.1.1",
+    "uuid": "^8.3.2",
+    "uuid-random": "^1.3.2",
     "xlsx": "^0.17.4"
   },
   "main": "app.js",
