--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap4-toggle": "^3.6.1",
     "chart.js": "2.7.2",
     "classnames": "^2.2.6",
+    "cogo-toast": "^4.2.3",
     "d3-geo": "^1.11.3",
     "faker": "^4.1.0",
     "formik": "^2.2.9",
